修改配送量
修改配送量，这叫通俗

--- a/src/cn/superion/material/purchase/sendProvider/ModSendProvider.mxml
+++ b/src/cn/superion/material/purchase/sendProvider/ModSendProvider.mxml
@@ -200,7 +200,7 @@
 											<s:GridColumn headerText="配送数量"
 														  itemEditor="cn.superion.material.purchase.send.IESendAmount"
 														  dataField="sendAmount"
-														  editable="false"
+														  editable="true"
 														  width="60"/>
 											<s:GridColumn headerText="进价"
 														  dataField="tradePrice"
