审核申请单模块
增加查询条件：明细备注

--- a/src/cn/superion/material/purchase/sendCheck/ModSendCheck.mxml
+++ b/src/cn/superion/material/purchase/sendCheck/ModSendCheck.mxml
@@ -65,6 +65,9 @@
 												id="deptCode"
 												queryIconClick="deptCode_queryIconClickHandler(event)"
 												keyDown="toNextControl(event,deptCode)"/>
+						
+						<s:Label text="明细备注"/>
+						<s:TextInput id="detailRemark" editable="true" width="100"/>
 						<s:Label id="txPhoLabel"
 								 text="物资编码"
 								 visible="false"
