--- a/src/cn/superion/material/purchase/sendCheck/ModSendCheck.mxml
+++ b/src/cn/superion/material/purchase/sendCheck/ModSendCheck.mxml
@@ -35,7 +35,7 @@
 						  verifyClick="verifyClickHandler(event)"
 						  queryClick="queryClickHandler(event)"
 						  exitClick="exitClickHandler(event)"/>
-			<controls:BarSubTitle title="审核申请单"/>
+			<controls:BarSubTitle title="申请单确认"/>
 			
 				<s:VGroup id="allPanel"
 						  width="100%"
@@ -47,12 +47,12 @@
 					<s:HGroup id="two"
 							  width="100%"
 							  verticalAlign="middle">
-						<s:Label text="状态"/>
+						<s:Label text="状态" color="#0000FF"/>
 						<s:DropDownList id="status" width="89" change="status_changeHandler(event)"
-										dataProvider="{new ArrayCollection([{'k':'1','v':'未审'},{'k':'2','v':'已审'},{'k':'1,2,3,4,5','v':'全部'}])}"
+										dataProvider="{new ArrayCollection([{'k':'1','v':'未审'},{'k':'2','v':'已审'},{'k':'3','v':'供货量已审'},{'k':'4','v':'供货商已审'}])}"
 										labelField="v" selectedIndex="0"/>
 						
-						<s:Label text="仓　　库"
+						<s:Label text="仓库"
 								 color="#0000FF"/>
 						<s:DropDownList id="storageCode"
 										change="storageCode_changeHandler(event)"
@@ -92,23 +92,24 @@
 							  id="hg2"
 							  verticalAlign="middle"
 							  paddingRight="2">
-						<s:Label text="本季度限额"/>
-						<s:TextInput id="seasonLimit" editable="false" width="259"/>
+						<s:Label text="科室本季度限额"/>
+						<s:TextInput id="seasonLimit" editable="false" width="80"/>
 						
 						<s:Label text="已用限额"/>
-						<s:TextInput id="usedLimit" editable="false" width="20%"/>
+						<s:TextInput id="usedLimit" editable="false" width="80"/>
 						
 						<s:Label text="剩余限额"/>
-						<s:TextInput id="remainLimit" editable="false" width="159"/>
+						<s:TextInput id="remainLimit" editable="false" width="80"/>
 						
 					</s:HGroup>
 					
 					<s:HGroup width="100%"
 							  height="100%">
 						<s:VGroup height="100%">
-							<controls:SuperDataGrid id="gridMasterList" width="185" height="100%"
+							<controls:SuperDataGrid id="gridMasterList" width="180" height="100%"
 													colorWhereColor="0x3F48CC"
 													colorWhereField="currentStatus"
+													horizontalScrollPolicy="auto"
 													colorWhereValue="2" verticalScrollPolicy="auto">
 								<controls:columns>
 									<mx:DataGridColumn headerText="选择"
@@ -197,7 +198,7 @@
 											<s:GridColumn headerText="序号"
 														  editable="false"
 														  dataField="rowNo"
-														  width="50"
+														  width="30"
 														  labelFunction="labFunDetail"
 											/>
 											<s:GridColumn headerText="领用部门"
@@ -207,7 +208,7 @@
 											<s:GridColumn headerText="物资名称"
 														  dataField="materialName"
 														  editable="false"
-														  width="140"/>
+														  width="160"/>
 											<s:GridColumn headerText="规格型号"
 														  dataField="materialSpec"
 														  editable="false"
@@ -215,29 +216,29 @@
 											<s:GridColumn headerText="单位"
 														  dataField="materialUnits"
 														  editable="false"
-														  width="80"/>
+														  width="50"/>
 											<s:GridColumn headerText="数量"
 														  dataField="amount"
 														  editable="false"
-														  width="80"/>
+														  width="70"/>
 											<s:GridColumn headerText="配送数量"
 														  dataField="sendAmount"
 														  itemEditor="cn.superion.material.purchase.send.IESendAmount"
 														  editable="true"
-														  width="80"/>
+														  width="70"/>
 											<s:GridColumn headerText="进价"
 														  dataField="tradePrice"
 														  editable="false"
-														  width="80"/>
+														  width="70"/>
 											<s:GridColumn headerText="进价金额"
 														  dataField="tradeMoney"
 														  editable="false"
-														  width="80"/>
+														  width="70"/>
 											<s:GridColumn headerText="备注"
 														  dataField="detailRemark"
 														  itemEditor="cn.superion.material.purchase.sendCheck.IEDetailRemark"
 														  editable="true"
-														  width="80"/>
+														  width="120"/>
 											<s:GridColumn headerText="供应商"
 														  dataField="mainProvider"
 														  editable="false"
@@ -273,7 +274,7 @@
 										<s:ArrayList>
 											<s:GridColumn headerText="序号"
 														  dataField="rowNo"
-														  width="50"
+														  width="30"
 														  labelFunction="labFunTotal"
 														  />
 											<s:GridColumn headerText="供应单位"
@@ -282,25 +283,25 @@
 														  width="200"/>
 											<s:GridColumn headerText="物资名称"
 														  dataField="materialName"
-														  width="140"/>
+														  width="160"/>
 											<s:GridColumn headerText="规格型号"
 														  dataField="materialSpec"
-														  width="140"/>
+														  width="120"/>
 											<s:GridColumn headerText="单位"
 														  dataField="materialUnits"
-														  width="80"/>
+														  width="70"/>
 											<s:GridColumn headerText="数量"
 														  dataField="amount"
-														  width="80"/>
+														  width="70"/>
 											<s:GridColumn headerText="配送数量"
 														  dataField="sendAmount"
-														  width="80"/>
+														  width="70"/>
 											<s:GridColumn headerText="进价"
 														  dataField="tradePrice"
-														  width="80"/>
+														  width="70"/>
 											<s:GridColumn headerText="进价金额"
 														  dataField="tradeMoney"
-														  width="80"
+														  width="70"
 														  />
 										</s:ArrayList>
 									</s:columns>
