--- a/src/cn/superion/material/purchase/send/ModSendDeal.mxml
+++ b/src/cn/superion/material/purchase/send/ModSendDeal.mxml
@@ -11,15 +11,18 @@
 		   xmlns:dataDict="cn.superion.dataDict.*">
 	<fx:Script>
 		<![CDATA[
-			import spark.events.GridItemEditorEvent;
-			
-			protected function gridDetailList_gridItemEditorSessionStartingHandler(event:GridItemEditorEvent):void
-			{
-				// TODO Auto-generated method stub
-				if(status.selectedItem.k =='3'){
-					event.preventDefault();
-				}
-			}
+//			代码移到ModSendDealas.as文件中了
+//			import spark.events.GridItemEditorEvent;
+//			
+//			protected function gridDetailList_gridItemEditorSessionStartingHandler(event:GridItemEditorEvent):void
+//			{
+//				// TODO Auto-generated method stub
+//				//if(status.selectedItem.k =='3'){
+//				//未审核（处理）的可以修改，其它状态不让改
+//				if(status.selectedItem.k !='2'){
+//					event.preventDefault();
+//				}
+//			}
 			
 		]]>
 	</fx:Script>
@@ -43,7 +46,7 @@
 						  verifyClick="verifyClickHandler(event)"
 						  queryClick="queryClickHandler(event)"
 						  exitClick="exitClickHandler(event)"/>
-			<controls:BarSubTitle title="配送数量审核"/>
+			<controls:BarSubTitle title="供货量审核"/>
 			
 				<s:VGroup id="allPanel"
 						  width="100%"
@@ -55,13 +58,20 @@
 					<s:HGroup id="two"
 							  width="100%"
 							  verticalAlign="middle">
-						<s:Label text="状态"/>
-						<s:DropDownList id="status" width="71" change="status_changeHandler(event)"
-										dataProvider="{new ArrayCollection([{'k':'2','v':'未审'},{'k':'3','v':'已审'}])}"
+						<s:Label text="状态"  color="#0000FF"/>
+						<s:DropDownList id="status" width="95" change="status_changeHandler(event)"
+										dataProvider="{new ArrayCollection([{'k':'2','v':'未审(2)'},{'k':'3','v':'已审(3)'},{'k':'1','v':'仓库未确认(1)'},{'k':'3','v':'供货商已审(4)'}])}"
 										labelField="v" selectedIndex="0"/>
+						<s:Label text="仓库"
+								 color="#0000FF"/>
+						<s:DropDownList id="storageCode"
+										change="storageCode_changeHandler(event)"
+										labelField="storageName"
+										width="100"
+										height="25"/>
 						<s:Label text="申领部门"
 								 />
-						<controls:TextInputIcon width="144"
+						<controls:TextInputIcon width="130"
 												id="deptCode"
 												queryIconClick="deptCode_queryIconClickHandler(event)"
 												keyDown="toNextControl(event,deptCode)"/>
@@ -76,12 +86,12 @@
 												queryIconClick="materialCode_queryIconClickHandler(event)"/>
 						<s:Label text="供应单位"
 								 styleName="myFormItemStyle"/>
-						<controls:TextInputIcon width="116"
+						<controls:TextInputIcon width="120"
 												id="salerCode"
 												queryIconClick="productCode_queryIconClickHandlers(event)"
 												keyDown="toNextControl(event,deptCode)"/>
 						<s:Label text="单据日期"/>
-						<mx:DateField id="fromDate" formatString="YYYY-MM-DD" width="120" /><s:Label text="--"/><mx:DateField id="toDate" formatString="YYYY-MM-DD" width="120" />
+						<mx:DateField id="fromDate" formatString="YYYY-MM-DD" width="105" /><s:Label text="--"/><mx:DateField id="toDate" formatString="YYYY-MM-DD" width="105" />
 						
 						<s:Button label="清空日期" click="{fromDate.text = toDate.text = '';}"/>
 					</s:HGroup>
@@ -90,14 +100,14 @@
 							  id="hg2"
 							  verticalAlign="middle"
 							  paddingRight="2">
-						<s:Label text="本季度限额"/>
-						<s:TextInput id="seasonLimit" editable="false" width="20%"/>
+						<s:Label text="科室本季度限额"/>
+						<s:TextInput id="seasonLimit" editable="false" width="70"/>
 						
 						<s:Label text="已用限额"/>
-						<s:TextInput id="usedLimit" editable="false" width="20%"/>
+						<s:TextInput id="usedLimit" editable="false" width="70"/>
 						
 						<s:Label text="剩余限额"/>
-						<s:TextInput id="remainLimit" editable="false" width="20%"/>
+						<s:TextInput id="remainLimit" editable="false" width="70"/>
 						
 					</s:HGroup>
 					
@@ -114,66 +124,73 @@
 									height="100%"
 									label="申请明细"
 									>
-								<s:DataGrid id="gridDetailList" width="100%" height="100%"
-											alternatingRowColors="[#EFF3FA,#FFFFFF]" 
-											selectedIndex="0"
-											editable="true" 
+								<s:DataGrid id="gridDetailList" x="0" y="-10" width="100%"
+											height="484" alternatingRowColors="[#EFF3FA,#FFFFFF]"
+											editable="true"
 											gridItemEditorSessionStarting="gridDetailList_gridItemEditorSessionStartingHandler(event)"
-											styleName="gridTemplate"
-											variableRowHeight="false" 
-											verticalScrollPolicy="auto"
-											horizontalScrollPolicy="auto" >
+											horizontalScrollPolicy="auto" selectedIndex="0"
+											skinClass="assets.skin.MyDataGridSkin"
+											styleName="gridTemplate" variableRowHeight="false"
+											verticalScrollPolicy="auto">
 									<s:columns>
 										<s:ArrayList>
 											<s:GridColumn headerText="序号"
 														  editable="false"
 														  dataField="rowNo"
-														  width="50"
-														  labelFunction="labFunDetail"
-											/>
-											<s:GridColumn headerText="申领部门"
+														  width="30"
+														  labelFunction="labFunDetail"/>
+											<s:GridColumn headerText="领用部门"
 														  dataField="wardName"
 														  editable="false"
 														  width="80"/>
 											<s:GridColumn headerText="物资名称"
 														  dataField="materialName"
 														  editable="false"
-														  width="140"/>
+														  width="160"/>
 											<s:GridColumn headerText="规格型号"
 														  dataField="materialSpec"
 														  editable="false"
-														  width="120"/>
+														  width="100"/>
 											<s:GridColumn headerText="单位"
 														  dataField="materialUnits"
 														  editable="false"
-														  width="80"/>
+														  width="50"/>
 											<s:GridColumn headerText="数量"
 														  dataField="amount"
 														  editable="false"
-														  width="50"/>
+														  width="70"/>
 											<s:GridColumn headerText="配送数量"
 														  dataField="sendAmount"
 														  editable="true"
 														  itemEditor="cn.superion.material.purchase.send.IESendAmount"
-														  width="65"/>
+														  width="70"/>
 											<s:GridColumn headerText="进价"
 														  dataField="tradePrice"
 														  editable="false"
-														  width="80"/>
+														  width="70"/>
 											<s:GridColumn headerText="进价金额"
 														  dataField="tradeMoney"
 														  editable="false"
-														  width="80"/>
+														  width="70"/>
+											<s:GridColumn headerText="备注"
+														  dataField="detailRemark"
+														  editable="false"
+														  width="120"/>
+											<!--下面为未审核的单子可以修改备注-->
+											<!--<s:GridColumn headerText="备注"
+														  dataField="detailRemark"
+														  itemEditor="cn.superion.material.purchase.sendCheck.IEDetailRemark"
+														  editable="true"
+														  width="120"/>-->
 											<s:GridColumn headerText="供应商"
 														  dataField="mainProvider"
 														  editable="false"
 														  labelFunction="labFunDetail"
-														  width="200"
-														  />
+														  width="220"/>
 											<s:GridColumn headerText="物资编码"
 														  dataField="materialCode"
 														  editable="false"
-														  width="120"/>
+														  width="110"/>
 										</s:ArrayList>
 									</s:columns>
 								</s:DataGrid>
@@ -183,18 +200,14 @@
 								height="100%"
 								label="申请汇总"
 								>
-								<s:DataGrid id="gridListCount" width="100%" height="100%"
-											alternatingRowColors="[#EFF3FA,#FFFFFF]" 
-											editable="false"
-											requestedMaxRowCount="2"
-											selectedIndex="0"
+								<s:DataGrid id="gridListCount" x="0" y="-10" width="100%"
+											height="484" alternatingRowColors="[#EFF3FA,#FFFFFF]"
+											editable="false" horizontalScrollPolicy="auto"
+											requestedMaxRowCount="2" selectedIndex="0"
 											selectionMode="singleRow"
-											sortableColumns="false"
-											styleName="gridTemplate"
-											variableRowHeight="false" 
-											verticalScrollPolicy="auto"
-											horizontalScrollPolicy="auto" 
-											>
+											skinClass="assets.skin.MyDataGridSkin"
+											sortableColumns="false" styleName="gridTemplate"
+											variableRowHeight="false" verticalScrollPolicy="auto">
 									<s:columns>
 										<s:ArrayList>
 											<s:GridColumn headerText="序号"
@@ -235,11 +248,12 @@
 						</mx:TabNavigator>
 						
 						<s:VGroup height="100%">
-							<controls:SuperDataGrid id="gridMasterList" width="322" height="100%"
-													colorWhereColor="0x3F48CC"
-													
+							<controls:SuperDataGrid id="gridMasterList" width="200" height="100%"
+													colorWhereColor="0x3F48CC"													
 													colorWhereField="currentStatus"
-													colorWhereValue="3" verticalScrollPolicy="auto">
+													colorWhereValue="3"
+													horizontalScrollPolicy="auto"
+													verticalScrollPolicy="auto">
 								<controls:columns>
 									<mx:DataGridColumn headerText="选择"
 													   width="22">
@@ -279,11 +293,16 @@
 									</mx:DataGridColumn>
 									<mx:DataGridColumn headerText="单号"
 													   dataField="billNo"
-													   width="100"/>
-									<mx:DataGridColumn headerText="申领部门"
+													   width="90"/>
+									<mx:DataGridColumn headerText="部门"
 													   dataField="deptCode"
 													   labelFunction="labFun"
 													   width="120"/>
+									<mx:DataGridColumn headerText="请领人"
+													   dataField="personId"
+													   labelFunction="labFun"
+													   width="40"/>									
+									
 								<!--	<mx:DataGridColumn headerText="日期"
 													   dataField="billDate"
 													   labelFunction="labFun"
