--- a/src/cn/superion/material/purchase/sendCheck/ModSendCheck.mxml
+++ b/src/cn/superion/material/purchase/sendCheck/ModSendCheck.mxml
@@ -48,8 +48,8 @@
 							  width="100%"
 							  verticalAlign="middle">
 						<s:Label text="状态" color="#0000FF"/>
-						<s:DropDownList id="status" width="89" change="status_changeHandler(event)"
-										dataProvider="{new ArrayCollection([{'k':'1','v':'未审'},{'k':'2','v':'已审'},{'k':'3','v':'供货量已审'},{'k':'4','v':'供货商已审'}])}"
+						<s:DropDownList id="status" width="95" change="status_changeHandler(event)"
+										dataProvider="{new ArrayCollection([{'k':'1','v':'未审(1)'},{'k':'2','v':'已审(2)'},{'k':'3','v':'供货量已审(3)'},{'k':'4','v':'供货商已审(4)'},{'k':'0','v':'申请未提交(0)'}])}"
 										labelField="v" selectedIndex="0"/>
 						
 						<s:Label text="仓库"
@@ -57,24 +57,26 @@
 						<s:DropDownList id="storageCode"
 										change="storageCode_changeHandler(event)"
 										labelField="storageName"
-										width="147"
+										width="100"
 										height="25"/>
 						<s:Label text="申领部门"
 								 styleName="myFormItemStyle"/>
-						<controls:TextInputIcon width="151"
+						<controls:TextInputIcon width="130"
 												id="deptCode"
 												queryIconClick="deptCode_queryIconClickHandler(event)"
-												keyDown="toNextControl(event,deptCode)"/>
-						
+												keyDown="toNextControl(event,deptCode)"/>						
 						<s:Label text="明细备注"/>
 						<s:TextInput id="detailRemark" editable="true" width="100"/>
-						<s:Label id="txPhoLabel"
-								 text="物资编码"
+						<s:Label id="xPhoLabel"
+								 text="明细备注"
 								 visible="false"
 								 includeInLayout="false"
 								 styleName="myFormItemStyle"
 								 color="blue"
-								 width="56"/>
+								 width="55"/>		
+
+		
+						
 						<controls:TextInputIcon id="materialCode"
 												width="123"
 												visible="false"
@@ -82,7 +84,7 @@
 												queryIconClick="materialCode_queryIconClickHandler(event)"/>
 						
 						<s:Label text="单据日期"/>
-						<mx:DateField id="fromDate" formatString="YYYY-MM-DD" width="120" /><s:Label text="--"/><mx:DateField id="toDate" formatString="YYYY-MM-DD" width="120" />
+						<mx:DateField id="fromDate" formatString="YYYY-MM-DD" width="105" /><s:Label text="--"/><mx:DateField id="toDate" formatString="YYYY-MM-DD" width="105" />
 						
 						
 						<s:Button label="清空日期" click="{fromDate.text = toDate.text = '';}"/>
@@ -93,24 +95,25 @@
 							  verticalAlign="middle"
 							  paddingRight="2">
 						<s:Label text="科室本季度限额"/>
-						<s:TextInput id="seasonLimit" editable="false" width="80"/>
+						<s:TextInput id="seasonLimit" editable="false" width="70"/>
 						
 						<s:Label text="已用限额"/>
-						<s:TextInput id="usedLimit" editable="false" width="80"/>
+						<s:TextInput id="usedLimit" editable="false" width="70"/>
 						
 						<s:Label text="剩余限额"/>
-						<s:TextInput id="remainLimit" editable="false" width="80"/>
+						<s:TextInput id="remainLimit" editable="false" width="70"/>
 						
 					</s:HGroup>
 					
 					<s:HGroup width="100%"
 							  height="100%">
 						<s:VGroup height="100%">
-							<controls:SuperDataGrid id="gridMasterList" width="180" height="100%"
+							<controls:SuperDataGrid id="gridMasterList" width="200" height="100%"
 													colorWhereColor="0x3F48CC"
 													colorWhereField="currentStatus"
+													colorWhereValue="2"
 													horizontalScrollPolicy="auto"
-													colorWhereValue="2" verticalScrollPolicy="auto">
+													verticalScrollPolicy="auto">
 								<controls:columns>
 									<mx:DataGridColumn headerText="选择"
 													  width="22">
@@ -153,7 +156,7 @@
 													  width="25"/>-->
 									<mx:DataGridColumn headerText="单号"
 													   dataField="billNo"
-													   width="100"/>
+													   width="90"/>
 									<mx:DataGridColumn headerText="部门"
 													  dataField="deptCode"
 													  labelFunction="labFun"
@@ -161,7 +164,7 @@
 									<mx:DataGridColumn headerText="请领人"
 													   dataField="personId"
 													   labelFunction="labFun"
-													   width="70"/>
+													   width="40"/>
 									<!--<mx:DataGridColumn headerText="日期"
 													  dataField="billDate"
 													  labelFunction="labFun"
@@ -184,23 +187,21 @@
 									height="100%"
 									label="申请明细"
 									>
-								<s:DataGrid id="gridDetailList" width="100%" height="100%"
-											alternatingRowColors="[#EFF3FA,#FFFFFF]" 
-											selectedIndex="0"
+								<s:DataGrid id="gridDetailList" x="0" y="-10" width="100%"
+											height="485" alternatingRowColors="[#EFF3FA,#FFFFFF]"
 											editable="true"
-											styleName="gridTemplate"
 											gridItemEditorSessionStarting="gridDetailList_gridItemEditorSessionStartingHandler(event)"
-											variableRowHeight="false" 
-											verticalScrollPolicy="auto"
-											horizontalScrollPolicy="auto" >
+											horizontalScrollPolicy="auto" selectedIndex="0"
+											skinClass="assets.skin.MyDataGridSkin"
+											styleName="gridTemplate" variableRowHeight="false"
+											verticalScrollPolicy="auto">
 									<s:columns>
 										<s:ArrayList>
 											<s:GridColumn headerText="序号"
 														  editable="false"
 														  dataField="rowNo"
 														  width="30"
-														  labelFunction="labFunDetail"
-											/>
+														  labelFunction="labFunDetail"/>
 											<s:GridColumn headerText="领用部门"
 														  dataField="wardName"
 														  editable="false"
@@ -212,7 +213,7 @@
 											<s:GridColumn headerText="规格型号"
 														  dataField="materialSpec"
 														  editable="false"
-														  width="120"/>
+														  width="100"/>
 											<s:GridColumn headerText="单位"
 														  dataField="materialUnits"
 														  editable="false"
@@ -243,12 +244,11 @@
 														  dataField="mainProvider"
 														  editable="false"
 														  labelFunction="labFunDetail"
-														  width="200"
-														  />
+														  width="220"/>
 											<s:GridColumn headerText="物资编码"
 														  dataField="materialCode"
 														  editable="false"
-														  width="120"/>
+														  width="110"/>
 										</s:ArrayList>
 									</s:columns>
 								</s:DataGrid>
@@ -258,18 +258,14 @@
 								height="100%"
 								label="申请汇总"
 								>
-								<s:DataGrid id="gridListCount" width="100%" height="100%"
-											alternatingRowColors="[#EFF3FA,#FFFFFF]" 
-											editable="false"
-											requestedMaxRowCount="2"
-											selectedIndex="0"
+								<s:DataGrid id="gridListCount" x="0" y="-10" width="100%"
+											height="484" alternatingRowColors="[#EFF3FA,#FFFFFF]"
+											editable="false" horizontalScrollPolicy="auto"
+											requestedMaxRowCount="2" selectedIndex="0"
 											selectionMode="singleRow"
-											sortableColumns="false"
-											styleName="gridTemplate"
-											variableRowHeight="false" 
-											verticalScrollPolicy="auto"
-											horizontalScrollPolicy="auto" 
-											>
+											skinClass="assets.skin.MyDataGridSkin"
+											sortableColumns="false" styleName="gridTemplate"
+											variableRowHeight="false" verticalScrollPolicy="auto">
 									<s:columns>
 										<s:ArrayList>
 											<s:GridColumn headerText="序号"
