--- a/src/cn/superion/material/purchase/sendInStock/ModInOut.mxml
+++ b/src/cn/superion/material/purchase/sendInStock/ModInOut.mxml
@@ -39,7 +39,7 @@
 				  gap="0">
 			<util:ToolBar id="toolBar"
 						  width="100%"
-						  printClick="printClickHandler('1')"
+						  printClick="printClickHandler('2')"
 						  excelClick="printClickHandler('3')"
 						  verifyClick="verifyClickHandler(event)"
 						  sumClick="toolBar_sumClickHandler(event)"
@@ -57,20 +57,23 @@
 					<s:HGroup id="two"
 							  width="100%"
 							  verticalAlign="middle">
-						<s:Label text="状态"/>
-						<s:DropDownList id="status" change="status_changeHandler(event)" selectedIndex="0" labelField="v" dataProvider="{new ArrayCollection([{'k':'0','v':'未审'},{'k':'1','v':'已审'}])}"/>
-						<s:Label text="单据编号"/>
-						<s:TextInput width="120"/>
-						<s:Label text="单据日期"/>
-						<mx:DateField id="fromDate" width="120" formatString="YYYY-MM-DD"/><s:Label text="--"/><mx:DateField id="toDate" width="120" formatString="YYYY-MM-DD" />
-						
-						<s:Label text="仓　  库"
+						<s:Label text="状态"  color="#0000FF"/>
+						<s:DropDownList id="status" width="95" change="status_changeHandler(event)"
+										dataProvider="{new ArrayCollection([{'k':'0','v':'未审'},{'k':'1','v':'已审'}])}"
+										labelField="v" selectedIndex="0"/>
+						<s:Label text="仓库"
 								 color="#0000FF"/>
 						<s:DropDownList id="storageCode"
 										change="storageCode_changeHandler(event)"
 										labelField="storageName"
-										width="108"
+										width="100"
 										height="25"/>
+						<s:Label text="单据编号"/>
+						<s:TextInput width="90"/>
+						<s:Label text="单据日期"/>
+						<mx:DateField id="fromDate" width="105" formatString="YYYY-MM-DD"/><s:Label text="--"/><mx:DateField id="toDate" width="105" formatString="YYYY-MM-DD" />
+						
+						
 					</s:HGroup>
 					<s:HGroup width="100%"
 							  height="100%">
@@ -108,18 +111,14 @@
 								height="100%"
 								label="按供货单位汇总"
 								>
-								<s:DataGrid id="gridListCount" width="100%" height="100%"
-											alternatingRowColors="[#EFF3FA,#FFFFFF]" 
-											editable="false"
-											requestedMaxRowCount="2"
-											selectedIndex="0"
+								<s:DataGrid id="gridListCount" x="0" y="-10" width="100%"
+											height="512" alternatingRowColors="[#EFF3FA,#FFFFFF]"
+											editable="false" horizontalScrollPolicy="auto"
+											requestedMaxRowCount="2" selectedIndex="0"
 											selectionMode="singleRow"
-											sortableColumns="false"
-											styleName="gridTemplate"
-											variableRowHeight="false" 
-											verticalScrollPolicy="auto"
-											horizontalScrollPolicy="auto" 
-											>
+											skinClass="assets.skin.MyDataGridSkin"
+											sortableColumns="false" styleName="gridTemplate"
+											variableRowHeight="false" verticalScrollPolicy="auto">
 									<s:columns>
 										<s:ArrayList>
 											<s:GridColumn headerText="序号"
@@ -159,16 +158,13 @@
 								label="按申领部门汇总"
 								>
 								
-								<util:MyDataGrid 
-									id="gridGroupByDept" width="100%" height="100%"
-									alternatingRowColors="[#EFF3FA,#FFFFFF]" 
-									editable="false"
-									requestedMaxRowCount="2"
-									selectedIndex="0"
-									selectionMode="singleRow"
-									sortableColumns="false"
-									skinClass="assets.skin.MyDataGridSkin"
-									>
+								<util:MyDataGrid id="gridGroupByDept" x="0" y="-10" width="100%"
+												 height="512"
+												 alternatingRowColors="[#EFF3FA,#FFFFFF]"
+												 editable="false" requestedMaxRowCount="2"
+												 selectedIndex="0" selectionMode="singleRow"
+												 skinClass="assets.skin.MyDataGridSkin"
+												 sortableColumns="false">
 									<util:columns>
 										<s:ArrayList>
 											<s:GridColumn headerText="序号"
