--- a/src/cn/superion/material/purchase/sendProvider/ModSendProvider.mxml
+++ b/src/cn/superion/material/purchase/sendProvider/ModSendProvider.mxml
@@ -40,17 +40,29 @@
 					<s:HGroup id="two"
 							  width="100%"
 							  verticalAlign="middle">
-						<s:Label text="状　　态"/>
-						<s:DropDownList id="status" width="161" change="status_changeHandler(event)"
-										dataProvider="{new ArrayCollection([{'k':'3','v':'未审'},{'k':'4','v':'已审'}])}"
+						<s:Label text="状态" color="#0000FF"/>
+						<s:DropDownList id="status" width="95" change="status_changeHandler(event)"
+										dataProvider="{new ArrayCollection([{'k':'3','v':'未审(3)'},{'k':'4','v':'已审(4)'},{'k':'0','v':'申请未提交(0)'},{'k':'1','v':'仓库未确认(1)'},{'k':'2','v':'供货量未审(2)'}])}"
 										labelField="v" selectedIndex="0"/>
-						<s:Label text="仓　　库"
+						<s:Label text="仓库"
 								 color="#0000FF"/>
 						<s:DropDownList id="storageCode"
 										change="storageCode_changeHandler(event)"
 										labelField="storageName"
-										width="147"
+										width="100"
 										height="25"/>
+						<s:Label text="申领部门"
+								 styleName="myFormItemStyle"/>
+						<controls:TextInputIcon width="130"
+												id="deptCode"
+												queryIconClick="deptCode_queryIconClickHandler(event)"
+												keyDown="toNextControl(event,deptCode)"/>
+						<s:Label text="供应单位"
+								 styleName="myFormItemStyle"/>
+						<controls:TextInputIcon width="120"
+												id="salerCode"
+												queryIconClick="productCode_queryIconClickHandlers(event)"
+												keyDown="toNextControl(event,deptCode)"/>
 						<s:Label id="txPhoLabel"
 								 text="物资编码"
 								 visible="false"
@@ -65,35 +77,36 @@
 						
 						
 						<s:Label text="单据日期"/>
-						<mx:DateField id="fromDate" formatString="YYYY-MM-DD" width="120" /><s:Label text="--"/><mx:DateField id="toDate" formatString="YYYY-MM-DD" width="120" />
+						<mx:DateField id="fromDate" formatString="YYYY-MM-DD" width="105" /><s:Label text="--"/><mx:DateField id="toDate" formatString="YYYY-MM-DD" width="105" />
 						
 						<s:Button label="清空日期" click="{fromDate.text = toDate.text = '';}"/>
 					</s:HGroup>
-					<s:HGroup  width="100%"
-							   verticalAlign="middle">
-						<s:Label text="供应单位"
-								 styleName="myFormItemStyle"/>
-						<controls:TextInputIcon width="161"
-												id="salerCode"
-												queryIconClick="productCode_queryIconClickHandlers(event)"
-												keyDown="toNextControl(event,deptCode)"/>
-						<s:Label text="申领部门"
-								 styleName="myFormItemStyle"/>
-						<controls:TextInputIcon width="148"
-												id="deptCode"
-												queryIconClick="deptCode_queryIconClickHandler(event)"
-												keyDown="toNextControl(event,deptCode)"/>
+					<s:HGroup width="100%"
+							  id="hg2"
+							  verticalAlign="middle"
+							  paddingRight="2">
+						<s:Label text="科室本季度限额"/>
+						<s:TextInput id="seasonLimit" editable="false" width="70"/>
+						
+						<s:Label text="已用限额"/>
+						<s:TextInput id="usedLimit" editable="false" width="70"/>
+						
+						<s:Label text="剩余限额"/>
+						<s:TextInput id="remainLimit" editable="false" width="70"/>
+						
 					</s:HGroup>
-					<s:HGroup width="1137"
+					<s:HGroup width="100%"
 							  height="100%">
-						<s:VGroup width="184" height="100%">
-							<controls:SuperDataGrid id="gridMasterList" width="178"
-										height="100%" colorWhereColor="0x3F48CC" colorWhereField="currentStatus"
-										colorWhereValue="4"
-										verticalScrollPolicy="auto">
+						<s:VGroup height="100%">
+							<controls:SuperDataGrid id="gridMasterList" width="200" height="100%"
+													colorWhereColor="0x3F48CC"
+													colorWhereField="currentStatus"
+													colorWhereValue="2"
+													horizontalScrollPolicy="auto"
+													verticalScrollPolicy="auto">								
 								<controls:columns>
 									<mx:DataGridColumn headerText="选择"
-													  width="25">
+													   width="22">
 										<mx:itemRenderer>
 											<fx:Component>
 												<mx:CheckBox change="checkbox1_changeHandler(event)"
@@ -108,10 +121,14 @@
 																if(data.isSelected){
 																	//选中的时候，查出对应的明细
 																	this.parentDocument.findDetailByMainAutoId(data);
+																	this.parentDocument.deptCode_changeHandler(data);
 																	
 																}else{
 																	this.parentDocument._autoId = this.data.autoId;
 																	this.parentDocument.removeDataByAutoId();
+																	this.parentDocument.seasonLimit.text ='';
+																	this.parentDocument.usedLimit.text ='';
+																	this.parentDocument.remainLimit.text = '';
 																}
 																var selectedAutoIds:Array = this.parentDocument.getSelectedAutoIds();
 																this.parentDocument.findSendMaterialTotal(selectedAutoIds);
@@ -124,17 +141,24 @@
 										</mx:itemRenderer>
 									</mx:DataGridColumn>
 									<!--<mx:DataGridColumn headerText="序号"
-													  dataField="rowNo"
-													  labelFunction="labFun"
-													  width="25"/>-->
+									dataField="rowNo"
+									labelFunction="labFun"
+									width="25"/>-->
 									<mx:DataGridColumn headerText="单号"
-													  dataField="billNo"
-													  width="120"/>
+													   dataField="billNo"
+													   width="90"/>
+									<mx:DataGridColumn headerText="部门"
+													   dataField="deptCode"
+													   labelFunction="labFun"
+													   width="120"/>
+									<mx:DataGridColumn headerText="请领人"
+													   dataField="personId"
+													   labelFunction="labFun"
+													   width="40"/>
 									<!--<mx:DataGridColumn headerText="日期"
-													  dataField="billDate"
-													  width="120"
-													  labelFunction="labFun"
-													  />-->
+									dataField="billDate"
+									labelFunction="labFun"
+									width="100"/>-->
 								</controls:columns>
 							</controls:SuperDataGrid>
 							<s:HGroup>
@@ -152,69 +176,75 @@
 									height="100%"
 									label="申请明细"
 									>
-								<s:DataGrid id="gridDetailList" width="100%" height="100%"
-											alternatingRowColors="[#EFF3FA,#FFFFFF]" 
-											selectedIndex="0"
+								<s:DataGrid id="gridDetailList" x="0" y="-10" width="100%"
+											height="484" alternatingRowColors="[#EFF3FA,#FFFFFF]"
 											editable="true"
 											gridItemEditorSessionStarting="gridDetailList_gridItemEditorSessionStartingHandler(event)"
-											styleName="gridTemplate"
-											variableRowHeight="false" 
-											verticalScrollPolicy="auto"
-											horizontalScrollPolicy="auto" >
+											horizontalScrollPolicy="auto" selectedIndex="0"
+											skinClass="assets.skin.MyDataGridSkin"
+											styleName="gridTemplate" variableRowHeight="false"
+											verticalScrollPolicy="auto">
 									<s:columns>
 										<s:ArrayList>
 											<s:GridColumn headerText="序号"
 														  editable="false"
 														  dataField="rowNo"
-														  width="50"
-														  labelFunction="labFunDetail"
-											/>
-											
+														  width="30"
+														  labelFunction="labFunDetail"/>	
+											<s:GridColumn headerText="领用部门"
+														  dataField="wardName"
+														  editable="false"
+														  width="80"/>
 											<s:GridColumn headerText="物资名称"
 														  dataField="materialName"
 														  editable="false"
-														  width="140"/>
+														  width="160"/>
 											<s:GridColumn headerText="规格型号"
 														  dataField="materialSpec"
 														  editable="false"
-														  width="80"/>
+														  width="100"/>
 											<s:GridColumn headerText="单位"
 														  dataField="materialUnits"
 														  editable="false"
-														  width="80"/>
+														  width="50"/>
 											<s:GridColumn headerText="备注"
 														  dataField="detailRemark"
 														  editable="false"
-														  width="100"/>
+														  width="120"/>
+											<!--下面为未审核的单子可以修改备注-->
+											<!--<s:GridColumn headerText="备注"
+											dataField="detailRemark"
+											itemEditor="cn.superion.material.purchase.sendCheck.IEDetailRemark"
+											editable="true"
+											width="120"/>-->
 											<s:GridColumn headerText="供应商"
 														  dataField="mainProvider"
 														  editable="true"
 														  labelFunction="labFunDetail"
 														  itemEditor="cn.superion.material.purchase.sendProvider.IEProvider"
-														  width="200"
-														  />
+														  width="220"/>
 											<s:GridColumn headerText="数量"
 														  dataField="amount"
 														  editable="false"
-														  width="60"/>
+														  width="70"/>
 											<s:GridColumn headerText="配送数量"
 														  itemEditor="cn.superion.material.purchase.send.IESendAmount"
 														  dataField="sendAmount"
 														  editable="true"
-														  width="60"/>
+														  width="70"/>
 											<s:GridColumn headerText="进价"
 														  dataField="tradePrice"
 														  itemEditor="cn.superion.material.purchase.sendProvider.IETradePrice"
 														  editable="true"
-														  width="80"/>
+														  width="70"/>
 											<s:GridColumn headerText="进价金额"
 														  dataField="tradeMoney"
 														  editable="false"
-														  width="80"/>
+														  width="70"/>
 											<s:GridColumn headerText="物资编码"
 														  dataField="materialCode"
 														  editable="false"
-														  width="100"/>
+														  width="110"/>
 										
 										</s:ArrayList>
 									</s:columns>
@@ -225,18 +255,14 @@
 								height="100%"
 								label="申请汇总"
 								>
-								<s:DataGrid id="gridListCount" width="100%" height="100%"
-											alternatingRowColors="[#EFF3FA,#FFFFFF]" 
-											editable="false"
-											requestedMaxRowCount="2"
-											selectedIndex="0"
+								<s:DataGrid id="gridListCount" x="0" y="-10" width="100%"
+											height="484" alternatingRowColors="[#EFF3FA,#FFFFFF]"
+											editable="false" horizontalScrollPolicy="auto"
+											requestedMaxRowCount="2" selectedIndex="0"
 											selectionMode="singleRow"
-											sortableColumns="false"
-											styleName="gridTemplate"
-											variableRowHeight="false" 
-											verticalScrollPolicy="auto"
-											horizontalScrollPolicy="auto" 
-											>
+											skinClass="assets.skin.MyDataGridSkin"
+											sortableColumns="false" styleName="gridTemplate"
+											variableRowHeight="false" verticalScrollPolicy="auto">
 									<s:columns>
 										<s:ArrayList>
 											<s:GridColumn headerText="序号"
