--- a/src/cn/superion/material/stat/currentStockStat/ModCurrentStockStat.mxml
+++ b/src/cn/superion/material/stat/currentStockStat/ModCurrentStockStat.mxml
@@ -45,17 +45,17 @@
 									   dataField="rowno"
 									   width="50"
 									   textAlign="left"/>
-					<mx:DataGridColumn headerText="医院条码"
+					<!--<mx:DataGridColumn headerText="医院条码"
 									   dataField="barCode"
 									   width="110"
-									   textAlign="left"/>
+									   textAlign="left"/>-->
 					<mx:DataGridColumn headerText="物资编码"
 									   dataField="materialCode"
-									   width="130"
+									   width="100"
 									   textAlign="left"/>
 					<mx:DataGridColumn headerText="物资名称"
 									   dataField="materialName"
-									   width="210"
+									   width="220"
 									   textAlign="left"/>
 					<mx:DataGridColumn headerText="规格型号"
 									   dataField="materialSpec"
@@ -70,19 +70,19 @@
 									   width="80"
 									   textAlign="right"/>
 					<mx:DataGridColumn headerText="批发价"
-									   width="90"
+									   width="80"
 									   dataField="wholeSalePrice"
 									   textAlign="right"/>
 					<mx:DataGridColumn headerText="批发金额"
-									   width="100"
+									   width="80"
 									   dataField="wholeSaleMoney"
 									   textAlign="right"/>
 					<mx:DataGridColumn headerText="售价"
-									   width="90"
+									   width="80"
 									   dataField="retailPrice"
 									   textAlign="right"/>
 					<mx:DataGridColumn headerText="售价金额"
-									   width="100"
+									   width="80"
 									   dataField="retailMoney"
 									   textAlign="right"/>
 					<mx:DataGridColumn headerText="批号"
@@ -91,7 +91,7 @@
 									   textAlign="left"
 									   labelFunction="batchLBF"/>
 					<mx:DataGridColumn headerText="有效期至"
-									   width="100"
+									   width="80"
 									   dataField="availDate"
 									   textAlign="left"/>
 					<mx:DataGridColumn headerText="生产厂家"
