--- a/src/cn/superion/material/system/materialDict/ModMaterialDict.mxml
+++ b/src/cn/superion/material/system/materialDict/ModMaterialDict.mxml
@@ -114,50 +114,50 @@
 													   width="40"
 													   textAlign="center"/>
 									<mx:DataGridColumn headerText="物资编码"
-													   width="120"
+													   width="100"
 													   textAlign="left"
 													   dataField="materialCode"/>
 									<mx:DataGridColumn headerText="物资名称"
-													   width="320"
+													   width="250"
 													   textAlign="left"
 													   dataField="materialName"/>
 									<mx:DataGridColumn headerText="规格型号"
 													   dataField="materialSpec"
-													   width="200"/>
+													   width="120"/>
 									<mx:DataGridColumn headerText="单位"
 													   dataField="materialUnits"
-													   width="60"
+													   width="50"
 													   textAlign="left"/>
 									<mx:DataGridColumn headerText="进价"
 													   dataField="tradePrice"
 													   textAlign="right"
 													   width="80"/>
-									<mx:DataGridColumn headerText="售价"
+									<!--<mx:DataGridColumn headerText="售价"
 													   dataField="retailPrice"
 													   textAlign="right"
-													   width="80"/>
+													   width="70"/>
 									<mx:DataGridColumn headerText="招标价"
 													   dataField="invitePrice"
 													   textAlign="right"
-													   width="80"/>
+													   width="70"/>
 									<mx:DataGridColumn headerText="最高限价"
 													   dataField="maxPrice"
 													   textAlign="right"
-													   width="80"/>
+													   width="70"/>
 									<mx:DataGridColumn headerText="生产厂家"
 													   dataField="factoryName"
 													   width="200"
-													   textAlign="left"/>
+													   textAlign="left"/>-->
 									<mx:DataGridColumn headerText="主要供应单位"
 													   dataField="mainProviderName"
 													   labelFunction="lbfMainProvider"
-													   width="200"/>
+													   width="220"/>
 									<mx:DataGridColumn headerText="所属仓库"
 													   dataField="storageDefault"
-													   width="100"
+													   width="80"
 													   labelFunction="lbfStorageDefault"
 													   textAlign="left"/>
-									<mx:DataGridColumn headerText="产品注册证有效期"
+									<!--<mx:DataGridColumn headerText="产品注册证有效期"
 													   dataField="registerAvlDate"
 													   width="120"
 													   textAlign="left"/>
@@ -165,7 +165,7 @@
 													   dataField="registerAvlDays"
 													   width="100"
 													   textAlign="left"
-													   visible="false"/>
+													   visible="false"/>-->
 								</controls:columns>
 							</controls:SuperDataGrid>
 							<!--底部按钮显示区-->
