--- a/src/cn/superion/material/purchase/manualCheck/ModManualCheck.mxml
+++ b/src/cn/superion/material/purchase/manualCheck/ModManualCheck.mxml
@@ -42,26 +42,27 @@
 					<s:HGroup id="two"
 							  width="100%"
 							  verticalAlign="middle">
-						<s:Label text="状态"/>
-						<s:DropDownList id="status" change="status_changeHandler(event)" selectedIndex="0" labelField="v" dataProvider="{new ArrayCollection([{'k':'2','v':'未审'},{'k':'3,4','v':'已审'}])}"/>
+						<s:Label text="状态" color="#0000FF"/>
+						<s:DropDownList id="status" width="95" change="status_changeHandler(event)" selectedIndex="0" labelField="v" dataProvider="{new ArrayCollection([{'k':'2','v':'未审'},{'k':'3,4','v':'已审'}])}"/>
 						<s:Label text="申领部门"
-								 color="blue"
+								 color="#0000FF"
 								 styleName="myFormItemStyle"/>
-						<controls:TextInputIcon width="243"
+						<controls:TextInputIcon width="130"
 												id="deptCode"
 												queryIconClick="deptCode_queryIconClickHandler(event)"
 												keyDown="toNextControl(event,deptCode)"/>
 						<s:Label text="单据日期"/>
-						<mx:DateField id="fromDate" formatString="YYYY-MM-DD" width="120" /><s:Label text="--"/><mx:DateField id="toDate" formatString="YYYY-MM-DD" width="120" />
+						<mx:DateField id="fromDate" formatString="YYYY-MM-DD" width="105" /><s:Label text="--"/><mx:DateField id="toDate" formatString="YYYY-MM-DD" width="105" />
 						<s:Button label="清空日期" click="{fromDate.text = toDate.text = '';}"/>
 					</s:HGroup>
 					<s:HGroup width="100%"
 							  height="100%">
-						<s:VGroup height="100%" width="55%">
+						<s:VGroup height="100%" width="50%">
 							<controls:SuperDataGrid id="gridMasterList"    width="100%" editable="true"
 													itemClick="findDetailByMainAutoId()"
 										height="100%" colorWhereColors="['0x3F48CC','0x3F48CC']" colorWhereField="currentStatus"
 										colorWhereValues="['3','4']"
+										horizontalScrollPolicy="auto"
 										verticalScrollPolicy="auto">
 								<controls:columns>
 									<!--<mx:DataGridColumn headerText="日期" editable="false"
@@ -70,18 +71,18 @@
 													   width="100"/>-->
 									<mx:DataGridColumn headerText="单号"
 													   dataField="billNo" editable="false"
-													   width="100"/>
-									<mx:DataGridColumn headerText="部门"
+													   width="90"/>
+									<mx:DataGridColumn headerText="领用部门"
 													   labelFunction="labFun"
 													   dataField="deptCode" editable="false"
-													   width="100"/>
+													   width="120"/>
 									<mx:DataGridColumn headerText="申请人"
 													   labelFunction="labFun"
 													   dataField="personId" editable="false"
-													   width="100"/>
+													   width="50"/>
 									<mx:DataGridColumn headerText="是否批准" editable="true"
 													   labelFunction="labFun"
-													  width="120">
+													  width="70">
 										<mx:itemEditor>
 											<fx:Component>
 												<mx:ComboBox change="checkbox1_changeHandler(event)"
@@ -143,32 +144,31 @@
 							
 						</s:VGroup>
 						
-						<mx:TabNavigator width="45%"
+						<mx:TabNavigator width="50%"
 										 height="100%" >
 							<s:NavigatorContent
 									width="100%"
 									height="100%"
 									label="申请明细"
 									>
-								<s:DataGrid id="gridDetailList" width="100%" height="100%"
-											alternatingRowColors="[#EFF3FA,#FFFFFF]" 
-											selectedIndex="0"
-											editable="true" 
+								<s:DataGrid id="gridDetailList" x="0" y="-10" width="100%"
+											height="514" alternatingRowColors="[#EFF3FA,#FFFFFF]"
+											editable="true"
 											gridItemEditorSessionStarting="gridDetailList_gridItemEditorSessionStartingHandler(event)"
-											styleName="gridTemplate"
-											variableRowHeight="false" 
-											verticalScrollPolicy="auto"
-											horizontalScrollPolicy="auto" >
+											horizontalScrollPolicy="auto" selectedIndex="0"
+											skinClass="assets.skin.MyDataGridSkin"
+											styleName="gridTemplate" variableRowHeight="false"
+											verticalScrollPolicy="auto">
 									<s:columns>
 										<s:ArrayList>
 											<s:GridColumn headerText="物资名称"
 														  dataField="materialName"
 														  editable="false"
-														  width="140"/>
+														  width="160"/>
 											<s:GridColumn headerText="规格型号"
 														  dataField="materialSpec"
 														  editable="false"
-														  width="120"/>
+														  width="100"/>
 											<s:GridColumn headerText="单位"
 														  dataField="materialUnits"
 														  editable="false"
@@ -176,16 +176,16 @@
 											<s:GridColumn headerText="申请数量"
 														  dataField="amount"
 														  editable="false"
-														  width="80"/>
+														  width="70"/>
 											<s:GridColumn headerText="审核数量"
 														  dataField="sendAmount"
 														  itemEditor="cn.superion.material.purchase.manualCheck.IESendAmount"
 														  editable="true"
-														  width="80"/>
+														  width="70"/>
 											<s:GridColumn headerText="备注"
 														  dataField="detailRemark"
 														  editable="false"
-														  width="80"/>
+														  width="120"/>
 										</s:ArrayList>
 									</s:columns>
 								</s:DataGrid>
