--- a/src/cn/superion/material/purchase/manualCheck2/ModManualCheck2.mxml
+++ b/src/cn/superion/material/purchase/manualCheck2/ModManualCheck2.mxml
@@ -29,7 +29,7 @@
 						  verifyClick="verifyClickHandler(event)"
 						  queryClick="queryClickHandler(event)"
 						  exitClick="exitClickHandler(event)"/>
-			<controls:BarSubTitle title="特殊申请单审核（采购）"/>
+			<controls:BarSubTitle title="特殊申请单审核（院办）"/>
 			
 				<s:VGroup id="allPanel"
 						  width="100%"
@@ -41,25 +41,27 @@
 					<s:HGroup id="two"
 							  width="100%"
 							  verticalAlign="middle">
-						<s:Label text="状态"/>
-						<s:DropDownList id="status" change="status_changeHandler(event)" selectedIndex="0" labelField="v" dataProvider="{new ArrayCollection([{'k':'3','v':'未审'},{'k':'4','v':'已审'}])}"/>
+						<s:Label text="状态" color="#0000FF"/>
+						<s:DropDownList id="status" width="95" change="status_changeHandler(event)" selectedIndex="0" labelField="v" dataProvider="{new ArrayCollection([{'k':'3','v':'未审'},{'k':'4','v':'已审'}])}"/>
 						<s:Label text="申领部门"
+								 color="#0000FF"
 								 styleName="myFormItemStyle"/>
-						<controls:TextInputIcon width="243" visible="false" includeInLayout="false"
+						<controls:TextInputIcon width="130"
 												id="deptCode"
 												queryIconClick="deptCode_queryIconClickHandler(event)"
 												keyDown="toNextControl(event,deptCode)"/>
 						<s:Label text="单据日期"/>
-						<mx:DateField id="fromDate" formatString="YYYY-MM-DD" width="120" /><s:Label text="--"/><mx:DateField formatString="YYYY-MM-DD" id="toDate" width="120" />
+						<mx:DateField id="fromDate" formatString="YYYY-MM-DD" width="105" /><s:Label text="--"/><mx:DateField formatString="YYYY-MM-DD" id="toDate" width="105" />
 						<s:Button label="清空日期" click="{fromDate.text = toDate.text = '';}"/>
 					</s:HGroup>
 					<s:HGroup width="100%"
 							  height="100%">
-						<s:VGroup height="100%" width="64%">
+						<s:VGroup height="100%" width="60%">
 							<controls:SuperDataGrid id="gridMasterList"    width="100%" editable="true"
 													itemClick="findDetailByMainAutoId()"
 										height="100%" colorWhereColor="0x3F48CC" colorWhereField="currentStatus"
 										colorWhereValue="5"
+										horizontalScrollPolicy="auto"
 										verticalScrollPolicy="auto">
 								<controls:columns>
 									<!--<mx:DataGridColumn headerText="序号"
@@ -72,9 +74,13 @@
 													  width="120"/>-->
 									<mx:DataGridColumn headerText="单号"
 													  dataField="billNo" editable="false"
-													  width="100"/>
+													  width="90"/>
+									<mx:DataGridColumn headerText="领用部门"
+													   labelFunction="labFun"
+													   dataField="deptCode" editable="false"
+													   width="120"/>
 									<mx:DataGridColumn headerText="上级意见" editable="false"
-													   width="80">
+													   width="70">
 										<mx:itemRenderer>
 											<fx:Component>
 												<mx:ComboBox change="checkbox1_changeHandler(event)"
@@ -116,9 +122,9 @@
 									</mx:DataGridColumn>
 									<mx:DataGridColumn headerText="申领部门分管领导意见" editable="true"
 													   dataField="remark2"
-													   width="200"/>
+													   width="150"/>
 									<mx:DataGridColumn headerText="院方意见" editable="false"
-													   width="80">
+													   width="70">
 										<mx:itemRenderer>
 											<fx:Component>
 												<mx:ComboBox change="checkbox1_changeHandler(event)"
@@ -160,10 +166,10 @@
 									</mx:DataGridColumn>
 									<mx:DataGridColumn headerText="管理部门分管领导意见" editable="true"
 													   dataField="remark3"
-													   width="200"/>
+													   width="150"/>
 									<mx:DataGridColumn headerText="总务意见" editable="true"
 													   dataField="remark1"
-													   width="120"/>
+													   width="70"/>
 								</controls:columns>
 							</controls:SuperDataGrid>
 							<s:HGroup>
@@ -173,7 +179,7 @@
 							
 						</s:VGroup>
 						
-						<mx:TabNavigator width="35%"
+						<mx:TabNavigator width="40%"
 										 height="100%" >
 							<s:NavigatorContent
 									width="100%"
@@ -193,11 +199,11 @@
 											<s:GridColumn headerText="物资名称"
 														  dataField="materialName"
 														  editable="false"
-														  width="120"/>
+														  width="160"/>
 											<s:GridColumn headerText="规格型号"
 														  dataField="materialSpec"
 														  editable="false"
-														  width="70"/>
+														  width="100"/>
 											<s:GridColumn headerText="单位"
 														  dataField="materialUnits"
 														  editable="false"
@@ -205,11 +211,16 @@
 											<s:GridColumn headerText="数量"
 														  dataField="amount"
 														  editable="false"
-														  width="50"/>
+														  width="70"/>
+											<s:GridColumn headerText="审核数量"
+														  dataField="sendAmount"
+														  itemEditor="cn.superion.material.purchase.manualCheck.IESendAmount"
+														  editable="true"
+														  width="70"/>
 											<s:GridColumn headerText="备注"
 														  dataField="detailRemark"
 														  editable="false"
-														  width="80"/>
+														  width="120"/>
 										</s:ArrayList>
 									</s:columns>
 								</s:DataGrid>
