--- a/src/cn/superion/material/purchase/sendSumary/ModProviderSumary.mxml
+++ b/src/cn/superion/material/purchase/sendSumary/ModProviderSumary.mxml
@@ -55,6 +55,10 @@
 					<s:HGroup id="two"
 							  width="100%"
 							  verticalAlign="middle">
+						<s:Label text="状态"  color="#0000FF"/>
+						<s:DropDownList id="status" width="95" change="status_changeHandler(event)"
+										dataProvider="{new ArrayCollection([{'k':'0','v':'未验收'},{'k':'1','v':'已验收'}])}"
+										labelField="v" selectedIndex="0"/>
 						<s:Label text="仓库"	 color="#0000FF"/>
 						<s:DropDownList id="storageCode"
 										change="storageCode_changeHandler(event)"
