--- a/src/cn/superion/material/purchase/sendInStock/ModInOut.mxml
+++ b/src/cn/superion/material/purchase/sendInStock/ModInOut.mxml
@@ -104,7 +104,7 @@
 						</s:VGroup>
 						
 						<mx:TabNavigator width="100%" change="tabnavigator1_changeHandler(event)"
-										 height="100%"
+										 height="100%"	id="tab"
 										 creationPolicy="all">
 							<s:NavigatorContent
 								width="100%"
